# plenitude-ha

./: .gitignore  README.md  hacs.json  pyproject.toml  repository.yaml
.github/workflows/: addon-build.yml  test.yml
addon/plenitude2mqtt/: CHANGELOG.md  Dockerfile  README.md  config.yaml  run.sh
addon/plenitude2mqtt/service/: const.py  cost.py  main.py  models.py  mqtt_publisher.py  options_loader.py  requirements.txt  state_store.py
addon/plenitude2mqtt/service/api/: __init__.py  kraken.py  rsc_parser.py
custom_components/plenitude/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/plenitude/api/: kraken.py  portal.py
custom_components/plenitude/translations/: en.json  fr.json
docs/superpowers/plans/: 2026-05-22-plenitude-mqtt-addon.md
docs/superpowers/specs/: 2026-05-21-plenitude-ha-design.md
scripts/: _lib.sh  check_sync.sh  sync_api.sh
tests/: __init__.py  conftest.py  test_addon_main.py  test_addon_mqtt_publisher.py  test_addon_options_loader.py  test_addon_state_store.py  test_api_kraken.py  test_api_portal.py  test_config_flow.py  test_coordinator.py  test_cost.py  test_models.py  test_rsc_parser.py  test_sensor.py
tests/fixtures/: kraken_consumption_response.json  kraken_login_response.json  kraken_refresh_response.json  kraken_unauthorized_response.json  kraken_viewer_response.json  portal_contract_page.html  portal_login_page.html
